@@ -46,8 +46,10 @@ static void add_operand_conflicts_in_node(const cfg_node &n, I_t &I)
   if(!result || !IS_SYMOP(result))
     return;
     
-  // Todo: Identify operations that code generation can always handle and exclude them (as done for the z80-like ports).
-   
+  // Todo: Identify more operations that code generation can always handle and exclude them (as done for the z80-like ports).
+  if (ic->op == '=')
+    return;
+
   operand_map_t::const_iterator oir, oir_end, oirs; 
   boost::tie(oir, oir_end) = n.operands.equal_range(OP_SYMBOL_CONST(result)->key);
   if(oir == oir_end)
